--- a/public/css/style-main.css
+++ b/public/css/style-main.css
@@ -64,6 +64,7 @@ a {
   display: none;
 }
 
+/* Media queries per l'adattamento a dispositivi mobili */
 @media screen and (max-width: 600px) {
   footer {
     bottom: auto;
@@ -73,5 +74,9 @@ a {
 
   footer p {
     margin-bottom: 1;
+  }
+
+  section {
+    min-height: 65vh;
   }
 }
