--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -19,20 +19,17 @@
 
                 <!-- Email -->
                 <div class="form-outline mb-1 input-group">
-                  <label for="email"><i class="fas fa-envelope fa-fw"></i></label> <!-- non funziona -->
+                  <div class="input-group-text"><i class="fa fa-envelope fa-fw"></i></div>
                   <input type="email" class="form-control" name="email" placeholder="Email" value="{{email}}" required/>
                 </div>
 
                 <!-- Password -->
-                <div class="form-outline mb-1 input-group">
-                  <label for="password"><i class="fa fa-lock"></i></label>
+                <div class="form-outline mb-3 input-group">
+                  <div class="input-group-text"><i class="fa fa-lock fa-fw"></i></div>
                   <input type="password" class="form-control" name="password" placeholder="Password" id="password" required/>
-                </div>
-
-                <!-- Mostra password -->
-                <div class="form-outline mb-2">
-                  <input class="form-check-input" type="checkbox" name="showPsw" onclick="showPwd()" />
-                  <label class="form-check-label" for="flexCheckDefault"> Mostra</label>
+                  
+                  <!-- Mostra password -->
+                  <div class="input-group-text" onclick="showPwd()"><i class="fa fa-eye"></i></div>
                 </div>
 
                 <!-- Remember me -->
