Aggiunta funzionalità di richiesta di essere organizzatore

--- a/views/partials/main-listing.handlebars
+++ b/views/partials/main-listing.handlebars
@@ -18,7 +18,7 @@
     <!-- Pulsanti -->
     <p class="lead buttons-par">
         <a class="px-1">
-            <button id="info" class="btn btn-info btn-lg" onclick="info('{{id}}')">Maggiori informazioni</button>
+            <button id="info" class="btn btn-info btn-lg" onclick="info({{id}})">Maggiori informazioni</button>
         </a>
         <a class="px-1">
             <button id="prenota" class="btn btn-prenota btn-lg" onclick="prenota({{id}})">Prenota</button>
