--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -4,13 +4,14 @@
     {{> header}}
 
     <section id="profileSection">
-        <!-- Messaggio di errore -->
-        <div class="form-outline mb-3 text-danger" id='errorMsg'>{{error}}</div>
-
-        <!-- Messaggio di successo -->
-        <div class="form-outline mb-3 text-success" id='successMsg'>{{success}}</div>
-
         <div class="container-xl px-4 mt-4">
+            <!-- Messaggio di errore -->
+            <div class="form-outline mb-3 text-danger" id='errorMsg'>{{error}}</div>
+
+            <!-- Messaggio di successo -->
+            <div class="form-outline mb-3 text-success" id='successMsg'>{{success}}</div>
+
+            <!-- Navbar -->
             <div class="col-xl">
                 <ul class="nav nav-tabs" id="prof-tab" role="tablist">
                     
@@ -53,11 +54,13 @@
 
                     <!-- Utente organizzatore -->
                     {{#if privilegi}} 
+
+                    <!-- TAB prenotazioni -->
                     <div class="tab-pane fade show active" id="prenotazioni" role="tabpanel"
                         aria-labelledby="prenotazioni-tab">
-                        <br>
+
                         {{#if notEmpty}}
-                        <table class="table">
+                        <table class="table mt-3">
                             <!-- Header della tabella -->
                             <tr>
                                 <th>Titolo evento</th>
@@ -82,6 +85,7 @@
                         {{/if}}
                     </div>
 
+                    <!-- TAB crea evento -->
                     <div class="tab-pane fade" id="creaEventoPage" role="tabpanel" aria-labelledby="creaEvento-tab">
                         <form action="/createEvent" method="post" id="creaEvento" class="form-signin my-3"
                             onsubmit="return validaCreazione()">
@@ -153,16 +157,17 @@
                         </div>
                     </div>
 
+                    <!-- TAB admin -->
                     <div class="tab-pane fade" id="admin" role="tabpanel" aria-labelledby="admin-Tab">
                         <div class="">
                             ADMIN
                         </div>
                     </div>
 
+                    <!-- TAB rimuovi evento -->
                     <div class="tab-pane fade" id="rimozioni" role="tabpanel" aria-labelledby="rimozioni-tab">
-                        <br>
                         {{#if numOrg}}
-                        <table class="table">
+                        <table class="table mt-3">
                             <!-- Header della tabella -->
                             <tr>
                                 <th>Titolo evento</th>
@@ -189,11 +194,12 @@
 
                     <!-- Utente normale -->
                     {{else}}
+
+                    <!-- TAB prenotazioni (utente normale) -->
                     <div class="tab-pane fade show active" id="prenotazioniNormal" role="tabpanel"
                         aria-labelledby="prenotazioni-tab">
-                        <br>
                         {{#if notEmpty}}
-                        <table class="table">
+                        <table class="table mt-3">
                             <!-- Header della tabella -->
                             <tr>
                                 <th>Titolo evento</th>
@@ -218,15 +224,25 @@
                         {{/if}}
                     </div>
 
+                    <!-- TAB diventa organizzatore (utente normale) -->
                     <div class="tab-pane fade" id="beOrganizer" role="tabpanel" aria-labelledby="beorganizer-Tab">
                         <div class="mt-3">
-                            Vuoi diventare un'organizzatore? Richiedi l'autorizzazione ad un organizzatore.
-                            <br>
-                            <!-- TBC -->
-                            <button class="btn btn-primary" onclick="#">Richiedi</button>
+                            <div id="contentDiv">
+                                {{#if richiesta}}
+                                    Hai già richiesto di essere un organizzatore. Attendi che la tua richiesta sia validata.
+                                {{else}}
+                                    Vuoi diventare un'organizzatore? Richiedi l'autorizzazione ad un organizzatore.
+                                {{/if}}
+                            </div>
+                            
+                            <!-- Se non hai richiesto di essere organizzatore allora mostra il pulsante (unless == if not) -->
+                            {{#unless richiesta}}
+                                <button class="btn btn-primary mt-3" id="btnRichiedi" onclick="richiediOrg('{{email}}')">Richiedi</button>
+                            {{/unless}}
                         </div>
                     </div>
                     {{/if}}
+
                 </div>
             </div>
         </div>
