--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -11,8 +11,8 @@
             <!-- Navbar -->
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="/highlights" class="nav-link px-2 link-dark">Highlights</a></li>
-                <li><a href="#" class="nav-link px-2 link-dark">Prossimamente</a></li>
-                <li><a href="#" class="nav-link px-2 link-dark">Eventi conclusi</a></li>
+                <li><a href="/nexts" class="nav-link px-2 link-dark">Prossimamente</a></li>
+                <li><a href="/passed" class="nav-link px-2 link-dark">Eventi conclusi</a></li>
             </ul>
 
             <!-- Barra di ricerca -->
