--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -81,7 +81,9 @@
                         </table>
 
                         {{else}}
-                        Non ci sono prenotazioni recenti.
+                        <div class="mt-3">
+                            Non ci sono prenotazioni recenti.
+                        </div>
                         {{/if}}
                     </div>
 
@@ -248,7 +250,9 @@
                         </table>
 
                         {{else}}
-                        Non ci sono prenotazioni recenti.
+                        <div class="mt-3">
+                            Non ci sono prenotazioni recenti.
+                        </div>
                         {{/if}}
                     </div>
 
