--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -6,10 +6,10 @@
     <section id="profileSection">
         <div class="container-xl px-4 mt-4">
             <!-- Messaggio di errore -->
-            <div class="form-outline mb-3 text-danger" id='errorMsg'>{{error}}</div>
+            <div class="form-outline mb-3 text-danger" id='errorMsg'></div>
 
             <!-- Messaggio di successo -->
-            <div class="form-outline mb-3 text-success" id='successMsg'>{{success}}</div>
+            <div class="form-outline mb-3 text-success" id='successMsg'></div>
 
             <!-- Navbar -->
             <div class="col-xl">
@@ -36,6 +36,11 @@
                             aria-controls="admin" aria-selected="false">Gestione organizzatori</a>
                     </li>
 
+                    <li class="nav-item">
+                        <a class="nav-link" id="storicoTab" data-toggle="tab" onclick="showStorico()" role="tab"
+                            aria-controls="storico" aria-selected="false">Storico eventi</a>
+                    </li>
+
                     <!-- Utente normale -->
                     {{else}}
                     <li class="nav-item">
@@ -46,6 +51,11 @@
                     <li class="nav-item">
                         <a class="nav-link" id="beOrganizerTab" data-toggle="tab" onclick="showBeOrganizer()" role="tab"
                             aria-controls="beOrganizer" aria-selected="false">Diventa organizzatore</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" id="storicoNormalTab" data-toggle="tab" onclick="showStoricoNormal()" role="tab"
+                            aria-controls="storico" aria-selected="false">Storico eventi</a>
                     </li>
                     {{/if}}
                 </ul>
@@ -222,6 +232,34 @@
                         {{/if}}
                     </div>
 
+                    <!-- TAB storico -->
+                    <div class="tab-pane fade" id="storico" role="tabpanel" aria-labelledby="storico-tab">
+                        {{#if notEmptyStorico}}
+                        <table class="table mt-3">
+                            <!-- Header della tabella -->
+                            <tr>
+                                <th>Titolo evento</th>
+                                <th>Data evento</th>
+                                <th>Luogo</th>
+                            </tr>
+
+                            <!-- Dati prenotazioni -->
+                            {{#each storico}}
+                            <tr>
+                                <td>{{titolo}}</td>
+                                <td>{{dataora}}</td>
+                                <td>{{luogo}}</td>
+                            </tr>
+                            {{/each}}
+                        </table>
+
+                        {{else}}
+                        <div class="mt-3">
+                            Non ci sono prenotazioni nello storico.
+                        </div>
+                        {{/if}}
+                    </div>
+
                     <!-- Utente normale -->
                     {{else}}
 
@@ -273,8 +311,36 @@
                             {{/unless}}
                         </div>
                     </div>
-                    {{/if}}
 
+                    <!-- TAB storico -->
+                    <div class="tab-pane fade" id="storicoNormal" role="tabpanel" aria-labelledby="storico-tab">
+                        {{#if notEmptyStorico}}
+                        <table class="table mt-3">
+                            <!-- Header della tabella -->
+                            <tr>
+                                <th>Titolo evento</th>
+                                <th>Data evento</th>
+                                <th>Luogo</th>
+                            </tr>
+
+                            <!-- Dati prenotazioni -->
+                            {{#each storico}}
+                            <tr>
+                                <td>{{titolo}}</td>
+                                <td>{{dataora}}</td>
+                                <td>{{luogo}}</td>
+                            </tr>
+                            {{/each}}
+                        </table>
+
+                        {{else}}
+                        <div class="mt-3">
+                            Non ci sono prenotazioni nello storico.
+                        </div>
+                        {{/if}}
+                    </div>
+
+                    {{/if}}
                 </div>
             </div>
         </div>
